# clion_game

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  README_AUDIT.md  build.py  diff.py  game.shm  imgui_exports.cpp  main.cpp  masks.py  script.shm  shell.html  test_shimlang.py  todo.md  tracy_exports.cpp
facet/: Cargo.toml
facet/facet/: CHANGELOG.md  Cargo.toml
facet/facet-args/: CHANGELOG.md  Cargo.toml
facet/facet-core/: CHANGELOG.md  Cargo.toml  expand.rs
facet/facet-csv/: CHANGELOG.md  Cargo.toml
facet/facet-deserialize/: CHANGELOG.md  Cargo.toml
facet/facet-json/: CHANGELOG.md  Cargo.toml
facet/facet-jsonschema/: CHANGELOG.md  Cargo.toml
facet/facet-kdl/: Cargo.toml
facet/facet-macros/: Cargo.toml
facet/facet-macros-emit/: CHANGELOG.md  Cargo.toml
facet/facet-macros-emit/src/: derive.rs
facet/facet-macros-parse/: CHANGELOG.md  Cargo.toml
facet/facet-msgpack/: CHANGELOG.md  Cargo.toml
facet/facet-pretty/: CHANGELOG.md  Cargo.toml
facet/facet-reflect/: CHANGELOG.md  Cargo.toml
facet/facet-serialize/: CHANGELOG.md  Cargo.toml
facet/facet-toml/: CHANGELOG.md  Cargo.toml
facet/facet-urlencoded/: CHANGELOG.md  Cargo.toml
facet/facet-xdr/: CHANGELOG.md  Cargo.toml
facet/facet-yaml/: CHANGELOG.md  Cargo.toml
facet/facet/src/: sample_generated_code.rs
glam-rs/: Cargo.toml
glam-rs/src/f32/: vec2.rs  vec3.rs
imgui-docking/: imgui_demo.cpp
imgui-docking/backends/: imgui_impl_opengl3.cpp
issues/: 1.md
logo/: diff.py
macroquad_playground/: .gitignore  Cargo.toml  game.shm  index.html  shimlang_bridge.js
macroquad_playground/src/: main.rs
shimlang/: CHANGES.md  Cargo.toml  LANGUAGE.md  ascii_art.shm  bench.py  bench.shm  script.shm  test_shimlang.py  todo.md
shimlang-vscode/: README.md  language-configuration.json  package.json
shimlang-vscode/syntaxes/: shimlang.tmLanguage.json
shimlang-vscode/tests/: package-lock.json  package.json
shimlang-vscode/tests/cases/: builtins.shm  comments.shm  (+8 more)
shimlang/benchmark_scripts/: nbody.shm
shimlang/src/: .lib.rs.swp  compile.rs  lex.rs  lib.rs  mem.rs  parse.rs  resolve.rs  runtime.rs  shimlibs.rs
shimlang/test_scripts/: add_int_and_str.stderr  doc_edge_cases.shm  function.shm  struct.shm
shimlang/test_scripts/00_basics/: and_short_circuit.shm  compound_assignment_edge_cases.stdout  division.shm  division.stdout  eq_overload.shm  eq_overload.stdout  hex_literals.shm  i32_min_literal.shm  if_else_if_else.shm  range_basic.shm  range_builtin.shm  range_empty.shm  range_negative_step.shm  range_precedence.shm  range_precedence.stdout  range_print.shm  range_step.shm  single_line_comment.shm  struct_print.shm  struct_print.stdout  try_float_conversion.stdout  try_int_conversion.stdout
shimlang/test_scripts/01_scoping/: 03_many_variables.shm  04_let_shadowing_closures.shm  04_let_shadowing_closures.stdout
shimlang/test_scripts/03_string_interpolation/: format_method.shm  int_format.shm
shimlang/test_scripts/04_dict/: dict_compound_assignment.stdout  dict_comprehensive.shm  dict_items.shm  dict_iter_tombstones.shm  dict_large_struct_values.shm  dict_shrink_to_fit.shm  large_dict.shm
shimlang/test_scripts/05_anon_fn/: closure_anon.shm  closure_basic.shm  closure_nested.shm  mutual_recursion.shm  sort_key.shm
shimlang/test_scripts/05_math/: math_methods.stdout
shimlang/test_scripts/06_list/: iteration_none_values.shm  list_clear.shm  list_extend.shm  list_extend_custom_iterator.shm  list_index.shm  list_insert.shm  list_pop.shm  list_reverse.shm  list_reversed.shm  list_sort_basic.shm  list_sort_multi_field.shm  list_sort_stable.shm  list_sort_with_key.shm  list_sorted.shm
shimlang/test_scripts/07_closures/: basic_closure.shm  closure_in_map.shm  multi_capture.shm  multi_capture.stdout  nested_closure.shm
shimlang/test_scripts/07_gc/: gc_method_calls.shm
shimlang/test_scripts/10_tuple/: destructure_assignment.shm  let_destructure.shm
shimlang/test_scripts/14_set/: iteration.shm  iteration.stdout
shimlang/test_scripts/decompile/: basic_print.shm.stdout  basic_print.stdout  captured_block.stdout  continue.shm.stdout  continue.stdout  default_args.shm.stdout  default_args.stdout  for_loop.shm.stdout  for_loop.stdout  function.shm  function.stdout  function_simple.shm.stdout  function_simple.stdout  if_else.shm.stdout  if_else.stdout  if_statement.shm.stdout  if_statement.stdout  list_index.shm.stdout  list_index.stdout  struct.shm.stdout  struct.stdout  variable.shm.stdout  variable.stdout  while_break.shm.stdout  while_break.stdout
shimlang/test_scripts/errors/: add_int_and_str.stderr  attr_on_non_object.stderr  closure_type_error.stderr  compare_gt_type_error.stderr  compare_gte_type_error.stderr  compare_lt_type_error.stderr  compare_lte_type_error.stderr  destructure_arity_mismatch.shm  destructure_arity_mismatch.stderr  dict_missing_key.stderr  dict_pop_too_many_args.stderr  divide_type_error.stderr  float_list_fail.stderr  fn_add_int_bool.stderr  fn_call_bad_kwarg.stderr  fn_extra_kwargs.stderr  fn_too_many_args0.stderr  for_non_iterable.stderr  hex_literal_too_wide.shm  hex_literal_too_wide.stderr  index_non_indexable.stderr  int_list_fail.stderr  let_bad_syntax.stderr  list_index_oob.stderr  list_pop_oob.shm  list_pop_oob.stderr  missing_return_semicolon.stderr  missing_semicolon_expr.stderr  modulus_type_error.stderr  multiline_call_span.stderr  multiline_fn_error.stderr  multiline_index_span.stderr  multiline_struct_construct_span.stderr  multiline_struct_method_error.stderr  multiply_type_error.stderr  negate_string.stderr  simple_panic.stderr  struct_method_body_error.stderr  struct_no_such_method.stderr  subtract_type_error.stderr  (+1 more)
shm-tracy/src/: lib.rs
src/: audio.rs  debug.rs  debug_draw.rs  gpu.rs  imgui.rs  lib.rs  mesh_gen.rs  script_bridge.rs  sdf.rs  sdl.rs  shimlang.rs  shimlang_imgui.rs  tex_gen.rs
tree-sitter-shimlang/: Cargo.toml  build.rs  grammar.js  package-lock.json  package.json
tree-sitter-shimlang/rust_src/: lib.rs
tree-sitter-shimlang/src/: grammar.json  node-types.json  parser.c  scanner.c
(+72 files in other folders)
