[package]
name = "clion_game"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]
path = "src/lib.rs"

[dependencies]
facet = { version = "0.27.14", optional = true}
facet-reflect = { version = "0.27.14", optional = true }
gl = "0.14.0"
glam = "0.30.4"
shimlang = { path = "shimlang" }
shm-tracy = { path = "shm-tracy" }

[patch.crates-io]
glam = { path = "glam-rs" }
facet = { path = "facet/facet" }
facet-reflect = { path = "facet/facet-reflect" }


[features]
default = ["facet", "dev"]
facet = ["dep:facet", "dep:facet-reflect"]
dev = []