[package]
name = "shimlang"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { version = "0.27.14", optional = true}
facet-reflect = { version = "0.27.14", optional = true }


[patch.crates-io]
glam = { path = "../glam-rs" }
facet = { path = "../facet/facet" }
facet-reflect = { path = "../facet/facet-reflect" }

[features]
default = ["facet", "dev"]
facet = ["dep:facet", "dep:facet-reflect"]
dev = []