[package]
name = "shimlang"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { version = "0.27.14", optional = true}
facet-reflect = { version = "0.27.14", optional = true }
tree-sitter = "0.25"
tree-sitter-shimlang = { path = "../tree-sitter-shimlang" }


[patch.crates-io]
facet = { path = "../facet/facet" }
facet-reflect = { path = "../facet/facet-reflect" }

[features]
default = ["dev"]
facet = ["dep:facet", "dep:facet-reflect"]
dev = []
